--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
     routerLink="/detail/{{hero.id}}"
     class="col-1-4">
     <div class="module hero">
-      <h4>{{hero.name}}</h4>
+      <h4 [ngStyle]="styles">{{hero.name}}</h4>
     </div>
   </a>
 </div>
