--- a/src/app/ad/ad.component.html
+++ b/src/app/ad/ad.component.html
@@ -1,4 +1,6 @@
 <div class="ad-banner-example">
-  <h3>Advertisements</h3>
+  <h3 [appHighlight]="'red'" defaultColor="violet">Advertisements</h3>
+  <h3 appHighlight defaultColor="violet">Advertisements</h3>
+  <button (click)="show()">点我</button>
   <ng-template appAd></ng-template>
 </div>
